# NeoPeak

./: README.md
1.Hardware/Peak/: neoPeak.SchDoc
1.Hardware/Peak/result/: NeoPeak_bom_origin.xlsx  Pick Place for neoPeak.csv
2.Firmware/: README.md
2.Firmware/neopeak/: .gitignore  CMakeLists.txt  README.md
2.Firmware/neopeak/components/: README.md
2.Firmware/neopeak/components/board/: CMakeLists.txt  README.md  board_init.cpp
2.Firmware/neopeak/components/drivers/: CMakeLists.txt  README.md
2.Firmware/neopeak/components/drivers/audio/: tone_map.h  tone_utils.cpp  tone_utils.h
2.Firmware/neopeak/components/drivers/buzzer/: buzzer.cpp  buzzer.hpp
2.Firmware/neopeak/components/drivers/imu/: README.md  icm42688p.cpp  icm42688p.h
2.Firmware/neopeak/components/drivers/imu42688p/: imu42688p.cpp  imu42688p.hpp
2.Firmware/neopeak/components/drivers/motor/: motor.cpp  motor.h
2.Firmware/neopeak/components/hal_board/: CMakeLists.txt  README.md  hal_encoder.cpp  hal_encoder.h  hal_i2c.cpp  hal_i2c.h  hal_input_power.cpp  hal_input_power.h  hal_pwm.cpp  hal_pwm.h
2.Firmware/neopeak/components/services/: CMakeLists.txt  README.md  idf_component.yml
2.Firmware/neopeak/components/services/core/: message_bus.cpp  message_bus.h  tone_music.cpp  tone_music.h  tone_player.cpp  tone_player.h
2.Firmware/neopeak/components/services/display/: display_service.cpp  display_service.h
2.Firmware/neopeak/components/services/feedback/: feedback_service.cpp  feedback_service.h
2.Firmware/neopeak/components/services/imu/: imu_service.cpp  imu_service.h
2.Firmware/neopeak/components/services/input/: encoder_service.cpp  encoder_service.h
2.Firmware/neopeak/components/services/power/: power_service.cpp  power_service.h
2.Firmware/neopeak/components/ui/: CMakeLists.txt  imu_cube_ui.cpp  imu_cube_ui.h  ui_app.cpp  ui_app.h
2.Firmware/neopeak/doc/: imu.md
2.Firmware/neopeak/main/: CMakeLists.txt  Kconfig.projbuild  imu_i2c_tool.c  imu_i2c_tool.h  main.c
2.Firmware/neopeak/tools/lvgl_preview/: CMakeLists.txt  README.md  build_preview.ps1  lv_conf.h  main.cpp  run_preview.ps1
4.Model/: base.STL  base_side.STL
